fixed css and started working on mobile chart

--- a/apps/gym/src/components/isolated/Weight/WeighChart/WeightChartMobile/WeightChartMobile.module.css
+++ b/apps/gym/src/components/isolated/Weight/WeighChart/WeightChartMobile/WeightChartMobile.module.css
@@ -1,3 +1,9 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
 @media (width > 480px) {
   .container {
     display: none;
