--- a/apps/gym/src/components/isolated/Weight/WeightList/WeightList.module.css
+++ b/apps/gym/src/components/isolated/Weight/WeightList/WeightList.module.css
@@ -1,10 +1,9 @@
 .container {
-  display: flex;
-  flex-direction: column;
-  width: min-content;
-  min-width: 400px;
+  /* display: flex; */
+  /* flex-direction: column; */
+  min-width: 390px;
   max-height: 100%;
-  position: relative;
+  /* position: relative; */
 }
 
 .add_btn {
